// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when closed 1`] = `
<div
  className="header-search"
>
  <button
    className="search-toggle btn"
    onClick={[Function]}
  >
    <i
      className="icon-magnifier"
    />
  </button>
  <form
    autoComplete="off"
    className=""
    onSubmit={[Function]}
  >
    <div
      className="header-search-wrapper"
    />
  </form>
</div>
`;

exports[`renders correctly when open 1`] = `
<div
  className="header-search"
>
  <button
    className="search-toggle btn"
    onClick={[Function]}
  >
    <i
      className="icon-magnifier"
    />
  </button>
  <form
    autoComplete="off"
    className=""
    onSubmit={[Function]}
  >
    <div
      className="header-search-wrapper show"
    />
  </form>
</div>
`;
